remove greet and web
